plang/testing/logs/false-incorrect/140/program140.p.p
ftZp (LX) (d8OL (r (rU (Ort))) Z (TOWWN) (R)) q R9QQ8.

k8 (WL4m4) J9Go8 (b1n7e (rc GdV) (zjfOF Ed) (FuV0)) v.
aspvH (rmf34 (u IStrg (fS0GR Fc)) (rW qn AYj) KIQ) :- xV.

nO1x LAgvc (B7) kQqg :- ((d es NURzR; (bZC))); bK6za (Dycb) (bw01K (q2ZB uBV (zEhC E) Yy6k)) DOLnJ yfgL; gl65r Cd V; tf55V (TOMt) (k (DF91) sg (o) ys) LOLI (ON5), zK (Z7) (OzLu), zPbMJ; (t4S6 YOlq N7 zR, q viDQ).


j.

sg6 y (MJ5s) :- iBQU.

r gQbl DfWW2 g ak83.


dyZR (tD (q w e7E R (t)) WY uS) (y EsP o8 (cQM) (FxQI)) kVwma.

ne5o gVO.
v3.
o JLk (GtlIj) :- wMNZ (vLSK) (jNqEt qUnTf (x wR R0P (PBV3m)) HN) (V80GI).


xfl.


o (w (f) h Yp R5pu) fY n p5v.


u (B) (mjjRu (c (KF) (Ak7RR) (B) (E))) Zl76 :- sB (NfN); rh30 (kQ6y).

? y6 zM.



